# ravel

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/app/: application.cpp  application.h  ctx.cpp  ctx.h  ctx.h~  main_window.cpp  main_window.h
src/cli/: commands.cpp  commands.h  dispatcher.cpp  dispatcher.h  repl.cpp  repl.h
src/core/: file_target.cpp  file_target.h  process.cpp  process.h  target.h
src/core/analysis/: strings.cpp  strings.h
src/core/headers/: pe.h
src/core/parsers/: binary_parser.h  elf.h  elf_parser.cpp  elf_parser.h  pe_parser.cpp  pe_parser.h
src/core/scanner/: scanner.cpp  scanner.h
src/platform/: linux_controller.cpp  linux_controller.h  process_controller.h  windows_controller.cpp  windows_controller.h
src/platform/linux/: controller.cpp  controller.h
src/platform/windows/: controller.cpp  controller.h
src/ui/: theme.h  view.h
src/ui/views/: diff_view.cpp  diff_view.h  disassembly.cpp  disassembly.h  file_info.cpp  file_info.h  memory.cpp  memory.h  processes.cpp  processes.h  scanner.cpp  scanner.h  strings.cpp  strings.h  xref_view.cpp  xref_view.h
src/util/: expected.h
